
Version 7.2.0 - 2024-04-29
--------------------------
* Bug fixes (see mercurial logs for details)
* Do not accept compressed content from unauthenticated request (#13142)
* Set loading eager to visible xxx2many on form view
* Add loading attribute to form view
* Add a contextual read limit on Model.read
* Add a contextual read limit for related fields
* Add xml_id field on ModelStorage
* Add send_message methods
* Store model on ir.rule.group
* Store model on ir.model.button
* Store model and field name on ir.model.field.access
* Store model name on ir.model.access
* Store model name on ir.model.field
* Add fmany2one field
* Allow creation of foreign key on non primary key
* Include context information in access error
* Remove trytond-worker max tasks per child option for Python <= 3.10
* Do not copy readonly relational fields
* Support list of single value in sortable_values tools
* Allow resetting password of user via RPC
* Support cached_property on object with __slots__
* Allow creating indexes concurrently
* Allow skipping index creation
* Add assert methods to test tools
* Set ELLIPSIS option flag on doctest
* Set IGNORE_EXCEPTION_DETAIL option flag on doctest
* Add timeout parameter on RPC definitions

Version 7.0.0 - 2023-10-30
--------------------------
* Bug fixes (see mercurial logs for details)
* Add pairwise_longest tools
* Add support for Python 3.12
* Support default values for autocomplete
* Support default value from context
* Add autocomplete method on ModelView
* Add likify tools
* Remove user from contextual key of Cache
* Remove user from evaluation context of rule domain
* Allow customizing context per model for rule
* Use multiple jobs to dump and restore a test database
* Support database cache as template for tests
* Add route test case
* Add on_scan_code method on Model
* Support add/update/remove/delete for on_change_with of xxx2Many
* Add decorator on RPC
* Remove translations with empty source
* Run doc tests with different globals