@@ -561,9 +561,14 @@ class ModelSQL(ModelStorage):
                     raise RequiredValidationError(
                         gettext('ir.msg_required_validation',
                             **cls.__names__(field_name)))
-        for name, _, error in cls._sql_constraints:
-            if backend.TableHandler.convert_name(name) in str(exception):
+        for name, constraint, error in cls._sql_constraints:
+            if (backend.TableHandler.convert_name(name) in str(exception)
+                    or (isinstance(constraint, (Unique, Exclude))
+                        and all(
+                            c.name in str(exception)
+                            for c in constraint.columns))):
                 raise SQLConstraintError(gettext(error))
+
         # Check foreign key in last because this can raise false positive
         # if the target is created during the same transaction.
         for field_name in field_names:
