@@ -1,3 +1,4 @@
+* Add partial support for constraints with SQLite backend
 
 Version 7.2.0 - 2024-04-29
 --------------------------
